rewrite theme code, remains: page flickering on load  - solution with cookies or on server side?

--- a/style.css
+++ b/style.css
@@ -109,11 +109,11 @@ input:checked + label:after{
 
 
 
-label.unloaded, label:after {
+label, label:after {
     transition: 0.3s;
 }
 
-label.loaded, label:after {
+label.dark, label:after {
     transition: none;
 }
 
